--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body.dark-mode .controls {
     padding: 0.5rem; 
     border-radius: 0.6rem; 
     font-size: 1rem; 
-    box-shadow: 0 4px 10px rgba(128, 0, 0, 0.3); 
+    /* box-shadow: 0 4px 10px rgba(128, 0, 0, 0.3);  */
 }
 .header p { font-size: 0.85rem; color: var(--text-muted); margin-top: 0.6rem; font-weight: 500; }
 
@@ -708,4 +708,5 @@ body.dark-mode .arrow-btn:hover {
     /* Ensure delete buttons are gone in print */
     .delete-btn { display: none !important; }
 }
+
 
